snugom/tests/ui/validate_email_on_numeric.stderr
error: email validator only supported for string fields
  --> tests/ui/validate_email_on_numeric.rs:14:23
   |
14 |     #[snugom(validate(email))]
   |                       ^^^^^
